less/navigation.less
// Navigation code here
.navigation {
	.flexr();
	justify-content: center;
	padding: 2vh 2vw;
}

.nav-item {
	font-family: 'Ubuntu', sans-serif;
	text-decoration: none;
	font-size: 1.6rem;
	color: @header-font-color;
	margin: 0 1.5vw;
	
	&:hover {
        -webkit-animation-name: pulse;
		animation-name: pulse;
        animation-duration: 2s;
        animation-delay: 0s;
      }
}

	
	.major {
		text-align: center;
		font-size: @font-size-h1;
		margin-top: 2vh;
		letter-spacing: -1px;
	}
	
.main-header {
	border-radius: 5px;
	width: 100%;
}

